--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
   padding: 0 5px;
 }
 
-.table-row > span {
+.table-row span {
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 0 5px;
